docs(api): 重构并扩充 API 文档，完善注解与接口说明
- 统一术语和格式，整体改为“API 参考”
- 增加详细目录导航，覆盖注解、消息、消费、事务、枚举、SPI 扩展等模块
- 深入补充注解用法示例及参数说明（@EnableStreamMQ、@StreamMQConsumer、@StreamMQTransactionConsumer、@StreamMQDlqConsumer）
- 详述消息生产核心 API （StreamMessageTemplate）及同步、异步、单向、批量、事务发送方法
- 完善消息构建器 MessageBuilder 用法和方法列表，强化示例代码
- 补充 Message、BatchMessage、MessageId、SendResult 等消息相关核心类说明
- 丰富消费 API 说明，涵盖并发消费、顺序消费、死信消费接口及示例
- 完善消费结果 ConsumeAction、上下文 ConsumeContext 及事务相关接口与枚举详解
- 补充各种枚举类型说明及用途（DelayLevel、MessageModel、ConsumeMode、SelectorType）
- 新增 SPI 扩展接口介绍和默认实现，覆盖序列化、转换器、过滤器、拦截器、重试策略、负载均衡、追踪、压缩等多个扩展点
- 各部分示例代码重写排版，提升可读性和规范化
- 删除老旧内容，统一术语与注释风格，提升文档维护性与易读性